# prover

./: .gitignore  .gitmodules  Proof.sol  Proof2.sol  Proof3.sol  README.md  swype.cpp  swype.h
mvp/client/prover_mvp_android/app/: .gitignore  CMakeLists.txt  CMakeLists_includeOpenCV.txt  build.gradle
mvp/client/prover_mvp_android/app/src/main/: AndroidManifest.xml
mvp/client/prover_mvp_android/app/src/main/assets/: camera_grayscale.frag.glsl  camera_grayscale_pack.frag.glsl  camera_grayscale_pack.vert.glsl  copy.frag.glsl  copy.vert.glsl  copy_scaled.vert.glsl  fft_1.frag.glsl  fft_horiz.frag.glsl  grayscale_camera.vert.glsl  reverse_copy.frag.glsl
mvp/client/prover_mvp_android/app/src/main/cpp/: .gitignore  Area.h  BoundsChecker.cpp  BoundsChecker.h  CircleDetector.cpp  CircleDetector.h  Perimeter.h  SwipeCircleDetector.cpp  SwipeCircleDetector.h  SwipeCode.h  SwypeCodeDetector.cpp  SwypeCodeDetector.h  SwypeStepDetector.cpp  SwypeStepDetector.h  ValueWithDefect.h  Vector.cpp  Vector.h  VectorExplained.cpp  VectorExplained.h  common.h  native-lib.cpp  swype_detect.cpp  swype_detect.h
mvp/client/prover_mvp_android/app/src/main/res/anim/: translate_dialog_appear.xml
mvp/client/prover_mvp_android/app/src/main/res/animator/: fadeout_fill.xml  fadeout_phone.xml  fadeout_stroke.xml  fadeout_stroke_delay1500.xml  fill_white_to_red.xml  ic_all_done_resize.xml  ic_all_done_translate_root.xml  rotate360_ccw.xml  rotate360_cw.xml  stroke_white_to_red.xml  swype_path_center_point_blink.xml  swype_path_circle_blink.xml
mvp/client/prover_mvp_android/app/src/main/res/drawable/: btn_bg_accented.xml  btn_white.xml  gradient_bg.xml  ic_all_done.xml  ic_arrow_forward_black_24dp.xml  ic_content_copy_accent_24dp.xml  ic_info_outline_white_24dp.xml  ic_not_verified.xml  (+13 more)
mvp/client/prover_mvp_android/app/src/main/res/drawable-v21/: btn_white.xml  ic_all_done_shrink.xml  ic_arror_diagonal_animated.xml  ic_arror_right_animated.xml  ic_not_verified_anim.xml  ic_record_start_animated.xml  ic_record_stop_animated.xml  no_money_anim.xml  phone_large_animated1_fadeout.xml  swype_path_point_blink.xml  swype_path_point_fill.xml  swype_point_fail.xml  swype_point_fail_filled.xml  swype_track_point_blink.xml
(+536 files in other folders)
